# lbl

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  config.yaml  full_config.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  version.txt
lbl/: __init__.py  version.txt
lbl/core/: __init__.py  astro.py  base.py  base_classes.py  fits_functions.py  io.py  logger.py  math.py  parameters.py  wrap_setup.py
lbl/doc/: AddingAnInstrument.md  __init__.py  default_wrap.py
lbl/doc/examples/: espresso_lhs1140_config.yaml  example.ipynb  example_demo_wrap.py  example_wrap.py  example_wrap_spirou_apero.py  example_wrap_spirou_cadc.py  full_spirou_config.yaml  harps_config.yaml  harps_proxima_config.yaml  spirou_config.yaml  spirou_fp_config.yaml  spirou_fp_config_06132.yaml  spirou_gl699_config.yaml  spirou_gl699_config_06132.yaml  test_wrap.py
lbl/doc/examples/ESPRESSO_demo/: README.md
lbl/doc/examples/HARPS_demo/: README.md
lbl/doc/examples/MAROONX_BLUE_demo/: example_wrap_maroonx_b.py
lbl/doc/examples/MAROONX_RED_demo/: example_wrap_maroonx_r.py
lbl/doc/examples/NIRPS_APERO_demo/: README.md
lbl/doc/examples/NIRPS_APERO_demo/lblrdb/: lbl_PROXIMA_PROXIMA.rdb
lbl/doc/examples/NIRPS_ESO_demo/: README.md
lbl/doc/examples/NIRPS_ESO_demo/lblrdb/: lbl_PROXIMA_PROXIMA.rdb
lbl/doc/examples/SPIROU_APERO_demo/: README.md  example_wrap_spirou_apero.py
lbl/doc/examples/SPIROU_CADC_demo/: example_wrap_spirou_cadc.py
lbl/doc/examples/parameters/: full_config.yaml  param_readme.fits
lbl/doc/examples/tests/: example_wrap_gl699.py  test_FP.py  test_carmenes.py  test_espresso.py  test_harps.py  test_harps2.py  test_retroaction.py  test_spirou.py  test_spirou_06132.py
lbl/doc/full_tests/: blaze_wrap.py  test_wrap.py  test_wrap_single.py
lbl/doc/parameters/: espresso_lhs1140_config.yaml
lbl/doc/tests/: README.md  apero_test.py  example_wrap_gl699.py  spirou_fp_config_06132.yaml  spirou_gl699_config_06132.yaml  test_carmenes.py  test_espresso.py  test_harps.py  test_harps2.py  test_spirou_06132.py
lbl/doc/tests/parameters/: espresso_lhs1140_config.yaml  full_config.yaml  harps_proxima_config.yaml  param_readme.csv  param_readme.md  spirou_fp_config.yaml  spirou_gl699_config.yaml
lbl/instruments/: .default.py.swp  README.md  carmenes.py  coralie.py  default.py  espresso.py  expres.py  generic.py  harps.py  harps_oldcode.py  harpsn.py  maroonx.py  nirps.py  nirps_ha.py  select.py  sophie.py  spirou.py
lbl/recipes/: __init__.py  compile.py  compute.py  lbl_clean.py  lbl_compile.py  lbl_compute.py  lbl_demo.py  lbl_find.py  lbl_mask.py  lbl_noise.py  lbl_preclean.py  lbl_reset.py  lbl_resmap.py  lbl_setup.py  lbl_telluclean.py  lbl_template.py  lbl_wrap.py  test_call_compile.py
lbl/resources/: __init__.py  admin.py  data_str_readme.md  lbl_admin.py  lbl_misc.py  misc.py  rename_files.py  wrap_default.txt
lbl/resources/apero_reqs/: requirements_all_3_11.txt  requirements_all_3_12.txt
lbl/science/: .general.py.swp  apero.py  general.py  plot.py  pre_clean.py  tellu_clean.py
lbl/tools/: lbl_blaze.py
