[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']
name = 'lbl'
authors = [
    {name = 'Neil Cook', email = 'neil.james.cook@gmail.com'},
    {name = 'Etienne Artigau', email = 'etienne.artigau@umontreal.ca'},
]
description = 'LBL - Line-by-line velocity measurements, an outlier-resistant method for precision velocimetry'
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = 'LICENSE'}
requires-python = "==3.9.*"
dependencies = [
    "astropy==5.3",
    "Bottleneck==1.3.7",
    "ipython==8.13.2",
    "scipy==1.10.1",
    "numba==0.57.0",
    "numpy==1.24.3",
    "matplotlib==3.7.1",
    "pandas==2.2.3",
    "tables==3.9.2",
    "tqdm==4.65.0",
    "PyYAML==6.0",
    "requests==2.28.2",
    "wget==3.2",
]

[project.urls]
Homepage = 'http://lbl.exoplanets.ca'
Repository = 'https://github.com/njcuk9999/lbl'

[project.scripts]
lbl_find = "lbl.recipes.lbl_find:run"
lbl_reset = "lbl.recipes.lbl_reset:run"
lbl_demo = "lbl.recipes.lbl_demo:run"
lbl_setup = "lbl.recipes.lbl_setup:run"
