[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = 'setuptools.build_meta'

[project]
dynamic = ['version']
name = 'lbl'
authors = [
    {name = 'Neil Cook', email = 'neil.james.cook@gmail.com'},
    {name = 'Etienne Artigau', email = 'etienne.artigau@umontreal.ca'},
]
description = 'LBL - Line-by-line velocity measurements, an outlier-resistant method for precision velocimetry'
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = 'LICENSE'}
requires-python = ">=3.12,<3.13"
dependencies = [
    "astropy==7.2.0",
    "Bottleneck==1.6.0",
    "ipython==8.32.0",
    "scipy==1.17.1",
    "numba==0.64.0",
    "numpy==2.4.2",
    "matplotlib==3.10.8",
    "pandas==3.0.1",
    "requests==2.32.5",
    "tables==3.11.0",
    "tqdm==4.67.3",
    "PyYAML==6.0.3",
    "wget==3.2",
]

[project.urls]
Homepage = 'http://lbl.exoplanets.ca'
Repository = 'https://github.com/njcuk9999/lbl'

[project.scripts]
lbl_find = "lbl.recipes.lbl_find:run"
lbl_reset = "lbl.recipes.lbl_reset:run"
lbl_demo = "lbl.recipes.lbl_demo:run"
lbl_setup = "lbl.recipes.lbl_setup:run"
