[metadata]
name = lbl
version = attr: lbl.core.base.__version__
description = Line by line code for radial velocity
long_description = file: README.md
author = Neil Cook
author_email = neil.james.cook at gmail.com
url = https://github.com/njcuk9999/lbl
license = MIT License

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    numpy==1.24.3
    astropy==5.3
    Bottleneck==1.3.7
    ipython==8.13.2
    scipy==1.10.0
    numba==0.57.0
    matplotlib==3.7.1
    pandas==2.0.2
    tables==3.8.0
    tqdm==4.65.0
    PyYAML==6.0
    requests==2.28.2
    wget==3.2
python_requires = >=3.9

[options.entry_points]
console_scripts =
    lbl_find = lbl.recipes.lbl_find:main
    lbl_reset = lbl.recipes.lbl_reset:main
    lbl_demo = lbl.recipes.lbl_demo:main
    lbl_setup = lbl.recipes.lbl_setup:main
