[metadata]
name = lbl
description = Line by line code for radial velocity
long_description = file: README.md
author = Neil Cook
author_email = neil.james.cook at gmail.com
url = https://github.com/njcuk9999/lbl
license = MIT License

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.9

[options.entry_points]
console_scripts =
    lbl_find = lbl.recipes.lbl_find:run
    lbl_reset = lbl.recipes.lbl_reset:run
    lbl_demo = lbl.recipes.lbl_demo:run
    lbl_setup = lbl.recipes.lbl_setup:run
